--- a/pure-HTML/.settings/org.eclipse.wst.common.component
+++ b/pure-HTML/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="gruppi-di-lavoro">
+        
+    <wb-module deploy-name="gruppi-di-lavoro-pureHTML">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="gruppi-di-lavoro"/>
-        <property name="java-output-path" value="/gruppi-di-lavoro/build/classes"/>
+                
+        <property name="java-output-path" value="/gruppi-di-lavoro-pureHTML/build/classes"/>
+        <property name="context-root" value="gruppi-di-lavoro-pureHTML"/>
+            
     </wb-module>
+    
 </project-modules>
