--- a/pure-HTML/src/main/webapp/css/style.css
+++ b/pure-HTML/src/main/webapp/css/style.css
@@ -2,10 +2,6 @@
 	background-color: yellow;
 }
 
-.container {
-	width: 220px;
-}
-
 .form-container {
 	display: flex;
 	flex-direction: column;
@@ -43,6 +39,23 @@
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	font-size: 14px;
 	width: 150px;
+}
+
+.login-container {
+	display: flex;
+	align-items: center;
+}
+
+.login-form {
+	margin-right: 5%;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 50%;
+	margin: auto;
 }
 
 th {
