--- a/RIA/src/main/webapp/css/style.css
+++ b/RIA/src/main/webapp/css/style.css
@@ -64,6 +64,49 @@
 	width: 0;
 }
 
+.overlay {
+  	position: fixed;
+  	top: 0;
+  	bottom: 0;
+  	left: 0;
+  	right: 0;
+ 	width: 100%;
+  	height: 100%;
+  	background: rgba(0, 0, 0, 0.5);
+  	backdrop-filter: blur(3px);
+  	z-index: 1;
+}
+
+
+.modal {
+  	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+	gap: 0.4rem;
+	width: 450px;
+	padding: 1.3rem;
+	min-height: 250px;
+	position: absolute;
+	top: 20%;
+	background-color: white;
+	border: 1px solid #ddd;
+	border-radius: 15px;
+	z-index: 2;
+	align-self: center;
+}
+
+.close-button {
+	transform: translate(210px, -85px);
+	padding: 0.5rem 0.7rem;
+	background: #eee;
+	border-radius: 25%;
+}
+
+body {
+	display: flex;
+	flex-direction: column
+}
+
 th {
 	text-align: start;
 }
