--- a/RIA/src/main/webapp/css/style.css
+++ b/RIA/src/main/webapp/css/style.css
@@ -39,7 +39,17 @@
 	border-radius: 5px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	font-size: 14px;
-	width: 150px;
+	min-width: 150px;
+}
+
+.success-message {
+	background-color: #90ee90;
+	color: #fff;
+	padding: 10px 15px;
+	border-radius: 5px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	font-size: 14px;
+	min-width: 150px;
 }
 
 .login-container {
