--- a/pure-HTML/src/main/webapp/css/style.css
+++ b/pure-HTML/src/main/webapp/css/style.css
@@ -38,7 +38,7 @@
 	border-radius: 5px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	font-size: 14px;
-	width: 150px;
+	min-width: 150px;
 }
 
 .login-container {
