--- a/RIA/src/main/webapp/css/style.css
+++ b/RIA/src/main/webapp/css/style.css
@@ -39,6 +39,7 @@
 	border-radius: 5px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	font-size: 14px;
+	max-width: 180px;
 	min-width: 150px;
 }
 
@@ -111,6 +112,18 @@
 	padding: 0.5rem 0.7rem;
 	background: #eee;
 	border-radius: 25%;
+}
+
+.draggable {
+	cursor: pointer;
+}
+
+.trash {
+	max-width: 40px;
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	opacity: 0.8;
 }
 
 body {
