fixed creator and contains check in RemoveUser and added success removed message

--- a/RIA/src/main/webapp/css/style.css
+++ b/RIA/src/main/webapp/css/style.css
@@ -44,7 +44,7 @@
 }
 
 .success-message {
-	background-color: #90ee90;
+	background-color: #26a269;
 	color: #fff;
 	padding: 10px 15px;
 	border-radius: 5px;
